Working on the front end

--- a/html/postbounty.html
+++ b/html/postbounty.html
@@ -4,7 +4,7 @@
         <title>Bounty dApp</title>
         <link rel="stylesheet" href="../css/uikit.min.css">
         <link rel="stylesheet" href="../css/uikit-rtl.min.css">
-        <link rel="stylesheet" href="../css/index.css">
+        <link rel="stylesheet" href="../css/signup.css">
         <script src="../js/uikit.min.js"></script>
         <script src="../js/uikit-icons.min.js"></script>
     </head>
@@ -24,18 +24,15 @@
         </nav>
 
         <div class="uk-margin-large-top uk-text-center">
-            <h1 class="uk-heading-small header">Sign Up Form</h1>
+            <h1>Bounty Posting</h1>
         </div>
         <hr class="uk-align-center" >
 
         <div class="uk-child-width-expand@s uk-align-center" style="width: 50%;" uk-grid>
             <div>
                 <div class="uk-child-width-expand@s" uk-grid>
-                    <div class="uk-width-1-2@m">
-                        <input class="uk-input input-fields" type="text" placeholder="First Name">
-                    </div>
-                    <div>
-                        <input class="uk-input input-fields" type="text" placeholder="Last Name">
+                    <div class="uk-width-1-1@m">
+                        <input class="uk-input input-fields" type="text" placeholder="Title">
                     </div>
                 </div>
             </div>
@@ -44,7 +41,7 @@
             <div>
                 <div class="uk-child-width-expand@s" uk-grid>
                     <div class="uk-width-1-1@m">
-                        <input class="uk-input input-fields" type="text" placeholder="Email">
+                        <input class="uk-input input-fields uk-textarea" type="text" placeholder="Description">
                     </div>
                 </div>
             </div>
@@ -53,32 +50,16 @@
             <div>
                 <div class="uk-child-width-expand@s" uk-grid>
                     <div class="uk-width-1-1@m">
-                        <input class="uk-input input-fields" type="text" placeholder="Password">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="uk-child-width-expand@s uk-align-center" style="width: 50%;" uk-grid>
-            <div>
-                <div class="uk-child-width-expand@s" uk-grid>
-                    <div class="uk-width-1-1@m">
-                        <input class="uk-input input-fields" type="text" placeholder="Confirm Password">
+                        <input class="uk-input input-fields" type="text" placeholder="Amount to be paid">
                     </div>
                 </div>
             </div>
         </div>
 
         <div>
-            <button class="uk-button signUpButton uk-position-bottom-center uk-margin-large-bottom">Sign Up</button>
+            <button class="uk-button btn uk-align-center">Post Bounty</button>
         </div>
 
-        <!-- Footer -->
-
-        <footer class="uk-position-bottom uk-margin-bottom">
-            <div class="uk-text-center">
-                <a href="#">Already have an account? Log In</a>
-            </div>
-        </footer>
-
     </body>
+</html>
 </html>
